@@ -1,2 +1,3 @@
-release.version=1.1
+jmeter.home=/opt/jmeter-2.5
+
 install.dir=/opt/jmeter-2.5/lib/ext
