@@ -1,6 +1,0 @@
-#
-# AMF Sampler Resource Strings
-#
-displayName=AMF Proxy Server
-
-amf_content_type=application/x-amf
