@@ -1,11 +1,0 @@
-#
-# AMF Sampler Resource Strings
-#
-displayName=AMF Request
-
-amf_object_encoding_version=Object Encoding Version
-amf_request_classname=Classname\:
-amf_request=AMF Request
-amf_request_defaults=AMF Request Defaults
-amf_content_type=application/x-amf
-amf_xml_panel_title=AMF XML
